Attempt to move Jekyll customizations to subdir to fix them not showing.

--- a/projects/assets/css/style.css
+++ b/projects/assets/css/style.css
@@ -6,3 +6,8 @@
 .page-header {
     background: url('/img/background-o.jpg');
 }
+
+a#skip-to-content {
+    position: absolute;
+    color: transparent;
+}
